# spout2pw

./: README.md  build.sh  install_into_proton.sh  meson.build  package.sh
